; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_autoext.c_cubeFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_autoext.c_cubeFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @cubeFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cubeFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32**, i32*** %6, align 8
  %9 = getelementptr inbounds i32*, i32** %8, i64 0
  %10 = load i32*, i32** %9, align 8
  %11 = call double @sqlite3_value_double(i32* %10)
  store double %11, double* %7, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load double, double* %7, align 8
  %14 = load double, double* %7, align 8
  %15 = fmul double %13, %14
  %16 = load double, double* %7, align 8
  %17 = fmul double %15, %16
  %18 = call i32 @sqlite3_result_double(i32* %12, double %17)
  ret void
}

declare dso_local double @sqlite3_value_double(i32*) #1

declare dso_local i32 @sqlite3_result_double(i32*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
